@@ -395,6 +395,14 @@ function goodnex_field($variables) {
     $output .= implode(', ', $rendered_tags);
   }
   
+  elseif ($variables['element']['#field_name'] == 'field_active') {
+    // For tags, concatenate into a single, comma-delimitated string.
+    foreach ($variables['items'] as $delta => $item) {
+      $rendered_tags[] = drupal_render($item);
+    }
+    $output .= implode(', ', $rendered_tags);
+  }
+  
   elseif ($variables['element']['#field_name'] == 'field_detail_color') {
     // For tags, concatenate into a single, comma-delimitated string.
     foreach ($variables['items'] as $delta => $item) {
